Updated Logger; updated to gradle 4.10; updated to Java 11